# recruiter_auto_respond

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONVERSION_PLAN.md  HANDOFF.md  appscript.js  config.py  gmail_client.py  llm_client.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sheets_client.py  state_manager.py
src/recruiter_auto_respond/: config.py  gmail_client.py  google_auth.py  llm_client.py  main.py  sheets_client.py  state_manager.py
src/recruiter_auto_respond/scripts/: manual_gmail_verify.py
tests/: conformance_gmail.py  conformance_llm.py  conformance_sheets.py  test_gmail_client.py  test_llm_client.py  test_sheets_client.py  test_state_manager.py
