[project]
name = "recruiter-auto-respond"
version = "0.1.0"
description = "A system to automatically respond to recruiter emails using Gmail and LLMs."
authors = [
    { name = "d-fan" }
]
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "httpx",
    "pydantic-settings",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-requests",
    "types-setuptools",
]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable standard rules (E, F, B, I) plus extra for consistency
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PL",   # pylint
    "N",    # pep8-naming
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["config", "gmail_client", "llm_client", "sheets_client", "state_manager"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
